--- a/.github/workflows/main_testing-azure-app.yml
+++ b/.github/workflows/main_testing-azure-app.yml
@@ -8,7 +8,8 @@ on:
     branches:
       - main
   workflow_dispatch:
-
+env: 
+DATABASE_URL: ${{ secrets.DATABASE_URL}}
 jobs:
   build:
     runs-on: ubuntu-latest
